--- a/2.4 Movie Ranking Project/index.html
+++ b/2.4 Movie Ranking Project/index.html
@@ -8,6 +8,6 @@
 <p>If you are a fan of Mr. Bean watch this</p>
 <h3>Stand By Me</h3>
 <p>If you are a Doreamon fan , watch this movie you'll get to know 
-    the bond between Nobita and Doreamon
+    the bond between Nobita and Doreamon , and how doremon gave everything to nobita in the ending
 </p>
 
